[package]
name = "parse-up"
version = "0.1.0"
edition = "2021"
description = "parsing combinators that help the user build up to a successful parse"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse-up-proc-macros = { path = "parse-up-proc-macros" }
anyhow = "1.0.71"
itertools = "0.10.5"
reedline = "0.19.1"
tap = "1.0.1"
nom = "7.1.3"
regex = "1.8.4"

[workspace]
members = ["parse-up-proc-macros"]

[dev-dependencies]
strum = { version = "0.24.1", features = ["derive"] }
