[package]
name = "parse-up"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse-up-proc-macros = { path = "parse-up-proc-macros" }
itertools = "0.10.5"

[workspace]
members = ["parse-up-proc-macros"]
