[package]
name = "parse-up-proc-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.53"
quote = "1.0.9"
syn = { version = "2.0.9", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.80"
syn = { version = "2.0.9", features = ["extra-traits"] }
